[package]
name = "ntime"
description = "NanoTime is a lightweight, high performance Rust library for nanosecond-precision timestamps."
version = "0.4.0"
authors = ["Lisandro Pin <lisandrop@proton.me>"]
categories = ["date-and-time"]
license = "MIT"
edition = "2024"
exclude = [".github/", ".gitignore", "assets/"]
readme = "README.md"
keywords = ["duration", "time", "timestamp"]
repository = "https://github.com/plisandro/ntime"

include = [
  "Cargo.toml",
  "LICENSE",
  "src/**/*",
]

[lints.rust]
warnings = "deny"

[lib]
name = "ntime"
path = "src/lib.rs"

[dependencies]
# no external dependencies FTW

[dev-dependencies]
divan = "0.1.21"

[[bench]]
name = "write"
harness = false
